tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/gateway/HTTP/to_tproxy.echo/_test_context/Gateway-VirtualService.1585977196.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-60257
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tproxy.echo-2-60257.svc.cluster.local
  namespace: echo-2-60257
spec:
  gateways:
  - gateway
  hosts:
  - tproxy.echo-2-60257.svc.cluster.local
  http:
  - route:
    - destination:
        host: tproxy.echo-2-60257.svc.cluster.local
        port:
          number: 80
